# COMFORT

./: .gitignore  README.md  download_assets.py  environment.yml  gather_results.py  gather_results_multilingual.py  generate_dataset.sh  run_english_ball_experiments.sh  run_english_car_left_experiments.sh  run_english_car_right_experiments.sh  run_multilingual_ball_experiments.sh  run_multilingual_car_left_experiments.sh  run_multilingual_car_right_experiments.sh  spatial_eval.py  spatial_gen.py  spatial_gen_api_multilingual.py
comfort_utils/: accuracy_metric.py  convention_metric.py  convert_general_metrics_results.py  convert_perspective_taking_results.py  data.py  data_utils.py  helper.py  language_ambiguity_metric.py  perspective_taking_metric.py  plot_helper.py  smoothness_metric.py  std_metric.py  symmetry_metric.py
comfort_utils/model_utils/: __init__.py  blip2.py  glamm_wrapper.py  gpt_wrapper.py  intern_vl.py  llava_gd.py  (+7 more)
data_generation/: comfort_ball_config.py  comfort_car_left_config.py  comfort_car_right_config.py  constants.py  custom_variations.py  generate_dataset.py  mapping.py  utils.py
models/GLAMM/: 1by1.py  args.output_file  demo.py  logits.py  pyproject.toml  updated_data_with_predictions.json
models/GLAMM/GranD/utils/: group_objects_utils.py
models/GLAMM/flagged/: log.csv
models/GLAMM/glamm/: GLaMM.py  __init__.py
models/GLAMM/glamm/llava/: llava_with_region_arch.py
models/GLAMM/glamm/llava/model/language_model/: llava_llama.py
models/GLAMM/glamm/llava/model/multimodal_encoder/: builder.py
models/GLAMM/mmdet/: __init__.py
(+265 files in other folders)
